--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,5 @@
 $primary-color: #444;
+$secondary-color: #eece1a;
 
 * {
   box-sizing: border-box;
@@ -25,6 +26,26 @@ h1, h2, h3 {
   &.sm-heading {
     margin-bottom: 2rem;
     padding: 0.2rem 1rem;
-    background: rgb(lighten($primary-color, 2) 0.5);
+    background: rgba(lighten($primary-color, 2), 0.5);
   }
+}
+
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
+header {
+  position: fixed;
+  z-index: 2;
+  width: 100;
+}
+
+.text-secondary {
+  color: $secondary-color;
+}
+
+main {
+  padding: 4rem;
+  height: 100%;
 }
