--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,10 @@
 $primary-color: #444;
 $secondary-color: #eece1a;
 
+@mixin easeOut {
+  transition: all 0.5s ease-out;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -48,4 +52,20 @@ header {
 main {
   padding: 4rem;
   height: 100%;
+
+  a {
+    padding: 0.4rem;
+
+    &:hover {
+      color: $secondary-color;
+      @include easeOut();
+    }
+  }
+
+  &#home {
+    overflow: hidden;
+    h1 {
+      margin-top: 20vh;
+    }
+  }
 }
