--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,8 +1,22 @@
 $primary-color: #444;
 $secondary-color: #eece1a;
+$show-home-image: true;
+$home-image: url(../img/background.jpg);
+$background-opcatiy: 0.9;
 
 @mixin easeOut {
   transition: all 0.5s ease-out;
+}
+
+@mixin background {
+  @if $show-home-image {
+    &#bg-img {
+      background: $home-image;
+      background-attachment: fixed;
+      background-size: cover;
+    }
+  }
+
 }
 
 * {
@@ -10,6 +24,7 @@ $secondary-color: #eece1a;
 }
 
 body {
+  @include background;
   background: $primary-color;
   color: white;
   height: 100%;
